cluster/bootstrap/fluxcd/extensions/weave-gitops.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ww-gitops-ingress
  namespace: flux-system
  annotations:
    gethomepage.dev/description: The Weave GitOps Dashboard
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: weave-gitops.png
    gethomepage.dev/name: Weave GitOps
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: fluxcd.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ww-gitops-weave-gitops
                port:
                  number: 9001
  tls:
    - hosts:
        - fluxcd.internal
      secretName: homelab-tls
